# tstwo

./: .eslintignore  .eslintrc.json  .gitignore  AGENTS.md  ENGINEERING_TASKS.md  FRI_PORTING_ROADMAP.md  LICENSE.md  PROVER_IMPLEMENTATION_SUMMARY.md  README.md  VITE_INTEGRATION.md  bun.lockb  bunfig.toml  debug_butterfly.ts  debug_coset.ts  debug_domain.ts  debug_ifft1.ts  debug_layer5.ts  debug_log6.ts  debug_minimal.ts  debug_simd_only.ts  debug_simple.ts  debug_targeted.ts  debug_twiddles.ts  eslint.config.js  package.json  porting_status.json  test.md  vitest.config.ts
test-equivalence/stwo-examples-equivalence/: Cargo.toml  README.md  generate_comprehensive_vectors.sh  package-lock.json  package.json  vitest.config.ts
test-equivalence/stwo-examples-equivalence/rust-examples/: 01_writing_a_spreadsheet.rs  02_from_spreadsheet_to_trace_polynomials.rs  03_committing_to_the_trace_polynomials.rs  04_constraints_over_trace_polynomial.rs  05_proving_an_air.rs  Cargo.toml  comprehensive_rust_test_vectors.json  generate_test_vectors.rs
test-equivalence/stwo-examples-equivalence/tests/: 01_spreadsheet.test.ts  02_from_spreadsheet_to_trace_polynomials.test.ts  03_committing_to_the_trace_polynomials.test.ts  04_constraints_over_trace_polynomial.test.ts
test-equivalence/stwo-examples-equivalence/tests-vector/: 02_comprehensive_equivalence.test.ts  03_comprehensive_equivalence.test.ts  04_comprehensive_equivalence.test.ts  05_comprehensive_equivalence.test.ts  comprehensive_rust_test_vectors.json
test-equivalence/stwo-examples-equivalence/typescript-examples/: demo.ts  (+5 more)
(+74 files in other folders)
