[package]
name = "stwo-examples-test-vectors"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "generate_test_vectors"
path = "rust-examples/generate_test_vectors.rs"

[[bin]]
name = "example_02_rust_vectors"
path = "rust-examples/02_from_spreadsheet_to_trace_polynomials.rs"

[dependencies]
stwo-prover = { path = "../../../tstwo/rust-reference/stwo/crates/prover" }
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0" 