[package]
name = "stwo-examples-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "writing_a_spreadsheet"
path = "writing_a_spreadsheet.rs"

[[bin]]
name = "generate_test_vectors"
path = "generate_test_vectors.rs"

[dependencies]
stwo-prover = { git = "https://github.com/starkware-libs/stwo", branch = "dev" }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1 